--- a/open-policy-agent-k8s-test/assets/required-labels-constraint-template.yaml
+++ b/open-policy-agent-k8s-test/assets/required-labels-constraint-template.yaml
@@ -1,17 +1,17 @@
 apiVersion: templates.gatekeeper.sh/v1beta1
 kind: ConstraintTemplate
 metadata:
-  name: k8srequiredlabels
+  name: required-labels
 spec:
   crd:
     spec:
       names:
-        kind: K8sRequiredLabels
-        listKind: K8sRequiredLabelsList
-        plural: k8srequiredlabels
-        singular: k8srequiredlabels
+        kind: RequiredLabels
+        listKind: RequiredLabelsList
+        plural: requiredlabels
+        singular: requiredlabels
       validation:
-        # Schema for the `parameters` field
+        # Schema for the `parameters` field in the constraint
         openAPIV3Schema:
           properties:
             labels:
@@ -20,7 +20,7 @@ spec:
   targets:
     - target: admission.k8s.gatekeeper.sh
       rego: |
-        package k8srequiredlabels
+        package requiredlabels
 
         violation[{"msg": msg, "details": {"missing_labels": missing}}] {
           provided := {label | input.review.object.metadata.labels[label]}
