--- a/open-policy-agent-k8s-test/assets/required-labels-constraint.yaml
+++ b/open-policy-agent-k8s-test/assets/required-labels-constraint.yaml
@@ -1,11 +1,25 @@
+# apiVersion: constraints.gatekeeper.sh/v1beta1
+# kind: K8sRequiredLabels
+# metadata:
+#   name: pod-must-have-owner
+# spec:
+#   match:
+#     kinds:
+#       - apiGroups: [""]
+#         kinds: ["Namespace"]
+#       # - apiGroups: [""]
+#       #   kinds: ["*"]
+#       # - apiGroups: ["*"]
+#       #   kinds: ["*"]
+#   parameters:
+#     labels: ["owner"]
+
 apiVersion: constraints.gatekeeper.sh/v1beta1
 kind: K8sRequiredLabels
 metadata:
-  name: pod-must-have-owner
+  name: all-resources-must-have-owner
 spec:
   match:
-    kinds:
-      - apiGroups: [""]
-        kinds: ["Pod"]
+    namespace: ["default"]
   parameters:
     labels: ["owner"]
