--- a/open-policy-agent-k8s-test/assets/container-registry-constraint-template.yaml
+++ b/open-policy-agent-k8s-test/assets/container-registry-constraint-template.yaml
@@ -1,7 +1,7 @@
 apiVersion: templates.gatekeeper.sh/v1beta1
 kind: ConstraintTemplate
 metadata:
-  name: whitelisted-registry
+  name: whitelistedregistry
 spec:
   crd:
     spec:
