--- a/open-policy-agent-k8s-test/assets/pod-required-labels-constraint-template.yaml
+++ b/open-policy-agent-k8s-test/assets/pod-required-labels-constraint-template.yaml
@@ -1,7 +1,7 @@
 apiVersion: templates.gatekeeper.sh/v1beta1
 kind: ConstraintTemplate
 metadata:
-  name: required-labels
+  name: requiredlabels
 spec:
   crd:
     spec:
