--- a/open-policy-agent-k8s-test/assets/required-labels-template.yaml
+++ b/open-policy-agent-k8s-test/assets/required-labels-template.yaml
@@ -21,11 +21,10 @@ spec:
     - target: admission.k8s.gatekeeper.sh
       rego: |
         package requiredlabels
-
         violation[{"msg": msg, "details": {"missing_labels": missing}}] {
           provided := {label | input.review.object.metadata.labels[label]}
           required := {label | label := input.parameters.labels[_]}
           missing := required - provided
           count(missing) > 0
-          msg := sprintf("you must provide labels: %v", [missing])
+          msg := sprintf("you must provide labels for object %v : %v", [input.review.object.kind ,missing])
         }
