update container-registry constraints

--- a/open-policy-agent-k8s-test/assets/container-registry-template.yaml
+++ b/open-policy-agent-k8s-test/assets/container-registry-template.yaml
@@ -23,10 +23,10 @@ spec:
       rego: |
         package whitelistedregistires
         whitelisted_registries = {registry |
-            registries = [
-                "quay.io"
-            ]
-            registry = registries[_]
+            # registries = [
+            #     "quay.io"
+            # ]
+            registry = input.parameters.registries[_]
         }
         registry_whitelisted(str, patterns) {
             registry_matches(str, patterns[_])
