--- a/open-policy-agent-k8s-test/assets/container-registry-allow.yaml
+++ b/open-policy-agent-k8s-test/assets/container-registry-allow.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: busybox-invalid
+  name: busybox-valid
   labels:
     owner: busybox-owner
 spec:
   containers:
   - name: busybox
-    image: busybox
+    image: quay.io/busybox
     args:
     - sleep
     - "1000000"
