removing old namespace exercise as it was redundant, add start of mutating example

--- a/open-policy-agent-gatekeeper/assets/registry-whitelist-allow.yaml
+++ b/open-policy-agent-gatekeeper/assets/registry-whitelist-allow.yaml
@@ -4,6 +4,7 @@ metadata:
   name: busybox-valid
   labels:
     owner: busybox-owner
+    team: test
 spec:
   containers:
   - name: busybox
@@ -11,27 +12,3 @@ spec:
     args:
       - sleep
       - "1000000"
----
-# apiVersion: apps/v1
-# kind: Deployment
-# metadata:
-#   name: registry-nginx-invalid
-#   labels:
-#     app: nginx
-#     owner: nginx-owner
-# spec:
-#   replicas: 1
-#   selector:
-#     matchLabels:
-#       app: nginx
-#   template:
-#     metadata:
-#       labels:
-#         app: nginx
-#         owner: nginx-owner
-#     spec:
-#       containers:
-#       - name: nginx
-#         image: nginx:1.7.9
-#         ports:
-#         - containerPort: 80
