--- a/open-policy-agent-gatekeeper/assets/required-labels-constraint.yaml
+++ b/open-policy-agent-gatekeeper/assets/required-labels-constraint.yaml
@@ -4,7 +4,7 @@ metadata:
   name: resources-must-have-owner
 spec:
   match:
-    namespace: ["default"]
+    namespaces: ["default"]
     kinds:
     - apiGroups: [""]
       kinds: ["Pod"]
